comecei escrever o conteudo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>título do site</h1>
+            <h1>cursos gratis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>texto do artigo 001</p>
+            <h2>curso de html5 com css3</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptates a odio corporis, veritatis nostrum minima repellendus perferendis iure explicabo suscipit, velit natus illo quibusdam ipsum odit vitae, fugit aut modi.</p>
         </article>
         <article>
-            <h2>atigo 002</h2>
-            <p>texto do artigo 002</p>
+            <h2>curso de java script</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem suscipit autem itaque aspernatur repudiandae et inventore dolores laudantium maxime. Officiis, nisi! Laborum, adipisci repudiandae perspiciatis provident consequuntur commodi architecto sint?</p>
         </article>
     </main>
 </body>
